syntax = "proto3";

package example.grpc.hello;
option java_package = "example.armeria.grpc.kotlin";

service HelloService {
  rpc Hello (HelloRequest) returns (HelloReply) {}
  rpc LazyHello (HelloRequest) returns (HelloReply) {}
  rpc BlockingHello (HelloRequest) returns (HelloReply) {}
  rpc ShortBlockingHello (HelloRequest) returns (HelloReply) {}
  rpc LotsOfReplies (HelloRequest) returns (stream HelloReply) {}
  rpc BlockingLotsOfReplies (HelloRequest) returns (stream HelloReply) {}
  rpc ShortBlockingLotsOfReplies (HelloRequest) returns (stream HelloReply) {}
  rpc LotsOfGreetings (stream HelloRequest) returns (HelloReply) {}
  rpc BidiHello (stream HelloRequest) returns (stream HelloReply) {}
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}
